package actionsPages;

public interface simplePageInt {
    public void showPage();
}
